footer quick links alignment corrected

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -88,3 +88,8 @@ section .section-title {
  #footer ul.quick-links li a:hover {
     color: yellow !important;
 }
+
+.quick{
+    margin-left: 8%;
+}
+
